// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image-set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="file__FullWrapper-xl38rp-0 jsWZvR"
  >
    <div
      className="file__TitleWrapper-xl38rp-3 jxqefU"
      data-layout="full"
    >
      <div
        className="file__Title-xl38rp-4 jQaZkr"
      >
        The Work of Bruce M. Sherman
      </div>
      <div
        className="file__SubTitle-xl38rp-5 eBOyll"
      >
        <div
          className="file__SubTitlePrompt-xl38rp-6 fSPdRP"
        >
          View Slideshow
        </div>
        <div
          className="file__SubTitleCount-xl38rp-7 khRxQS"
        >
          3
           Images
        </div>
      </div>
    </div>
    <div
      className="file__IconContainer-xl38rp-8 hRLMvs"
    >
      <svg
        data-name="imageset"
        id="imageset"
        viewBox="0 0 44 44"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
          transform="translate(-6728.67 -507.72)"
        />
        <polygon
          points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
        />
        <polygon
          points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
        />
      </svg>
    </div>
  </div>
  <img
    src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
    width="100%"
  />
</div>
`;

exports[`renders a mini image-set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="file__MiniWrapper-xl38rp-1 jwvkOv"
  >
    <img
      height="100%"
      src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
      width="auto"
    />
    <div
      className="file__MiniInner-xl38rp-2 bSkodZ"
    >
      <div
        className="file__TitleWrapper-xl38rp-3 jxqefU"
        data-layout="mini"
      >
        <div
          className="file__Title-xl38rp-4 jQaZkr"
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="file__SubTitle-xl38rp-5 eBOyll"
        >
          <div
            className="file__SubTitlePrompt-xl38rp-6 fSPdRP"
          >
            View Slideshow
          </div>
          <div
            className="file__SubTitleCount-xl38rp-7 khRxQS"
          >
            3
             Images
          </div>
        </div>
      </div>
      <div
        className="file__IconContainer-xl38rp-8 hRLMvs"
      >
        <svg
          data-name="imageset"
          id="imageset"
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
            transform="translate(-6728.67 -507.72)"
          />
          <polygon
            points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
          />
          <polygon
            points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
